Fixed styles to show image behind a dropdown

--- a/packages/core/src/components/exam/DropdownAnswer.less
+++ b/packages/core/src/components/exam/DropdownAnswer.less
@@ -79,7 +79,7 @@
     &__menu {
       position: absolute;
       width: 100%;
-      z-index: 1;
+      z-index: 2;
       border: 1px solid @colors[link];
       top: calc(100% - 2px);
       // Toggle visibility via CSS due to MathJax. It is so slow to render new
